--- a/projects.json
+++ b/projects.json
@@ -52,6 +52,93 @@
       "Tags": [
           "Big project", "Academic", "Work"
       ]
+    },
+    {
+      "Title": "Debug Project 2",
+      "BodyContent": "<p>This is the HTML content for Project 2.</p>",
+      "Timeframe": {
+        "Sortable": "",
+        "Display": ""
+      },
+      "Collaborators": [
+        {
+          "Name": "Collaborator 1",
+          "Role": "Designer"
+        },
+        {
+          "Name": "Collaborator 2",
+          "Role": "Developer"
+        }
+      ],
+      "Description": "A short project with collaborators",
+      "ThumbnailImage": "",
+      "Images": [
+        {
+          "ImageURL": "images/project1thumb.jpg",
+          "Description": "sample image 1."
+        }
+      ],
+      "Tags": [
+          "Big project", "Academic", "Work"
+      ]
+    },
+    {
+      "Title": "Debug Project 2",
+      "BodyContent": "<p>This is the HTML content for Project 2.</p>",
+      "Timeframe": {
+        "Sortable": "",
+        "Display": ""
+      },
+      "Collaborators": [
+        {
+          "Name": "Collaborator 1",
+          "Role": "Designer"
+        },
+        {
+          "Name": "Collaborator 2",
+          "Role": "Developer"
+        }
+      ],
+      "Description": "A short project with collaborators",
+      "ThumbnailImage": "",
+      "Images": [
+        {
+          "ImageURL": "images/project1thumb.jpg",
+          "Description": "sample image 1."
+        }
+      ],
+      "Tags": [
+          "Big project", "Academic", "Work"
+      ]
+    },
+    {
+      "Title": "Debug Project 2",
+      "BodyContent": "<p>This is the HTML content for Project 2.</p>",
+      "Timeframe": {
+        "Sortable": "",
+        "Display": ""
+      },
+      "Collaborators": [
+        {
+          "Name": "Collaborator 1",
+          "Role": "Designer"
+        },
+        {
+          "Name": "Collaborator 2",
+          "Role": "Developer"
+        }
+      ],
+      "Description": "A short project with collaborators",
+      "ThumbnailImage": "",
+      "Images": [
+        {
+          "ImageURL": "images/project1thumb.jpg",
+          "Description": "sample image 1."
+        }
+      ],
+      "Tags": [
+          "Big project", "Academic", "Work"
+      ]
     }
   ]
 }
