--- a/projects.json
+++ b/projects.json
@@ -11,9 +11,8 @@
       "ThumbnailImage": "images/Airships/thumbnail.jpg",
       "Collaborators": [],
       "Tags": [
-        "Academic",
-        "Programming",
-        "Game Design"
+        "Personal",
+        "3D Modelling"
       ],
       "Images": []
     },
