Grid Item Descriptions
Now it's not just titles! The descriptions show when hovered.

--- a/projects.json
+++ b/projects.json
@@ -100,7 +100,7 @@
         },
         {
           "ImageURL": "images/BuildingStudy/Paraline.jpg",
-          "Description": "My hand-drafted Paraline drawing of one of Jorn Utzon's Fredensborg Houses."
+          "Description": "My hand-drafted worm's eye Paraline drawing of one of Jorn Utzon's Fredensborg Houses."
         },
         {
           "ImageURL": "images/BuildingStudy/FBH1.jpg",
