More About Me Content
Populates bullet points from a different json file!

--- a/projects - Backup.json
+++ b/projects - Backup.json
@@ -987,7 +987,6 @@
       "Collaborators": [],
       "Tags": [
         "Laser Cutting",
-        "Casts and Molds",
         "Props",
         "Anime"
       ],
@@ -1977,7 +1976,7 @@
     },
     {
       "Title": "Antiquarian Photography",
-      "BodyContent": "<p>New project content in HTML format.</p>",
+      "BodyContent": "Maybe split these into multiple projects?",
       "Timeframe": {
         "Sortable": "",
         "Display": "Month Year"
@@ -1986,7 +1985,7 @@
       "ThumbnailImage": "images/default-thumbnail.jpg",
       "Collaborators": [],
       "Tags": [
-        "Technical"
+        "Printmaking"
       ],
       "Images": [
         {
@@ -2726,6 +2725,55 @@
       "Complete": false,
       "Favorite": false,
       "Hidden": false
+    },
+    {
+      "Title": "Screenprinting in the Digital Era",
+      "BodyContent": "My final roots class",
+      "Timeframe": {
+        "Sortable": "",
+        "Display": "Month Year"
+      },
+      "Description": "A brief description of the new project.",
+      "ThumbnailImage": "images/default-thumbnail.jpg",
+      "Collaborators": [],
+      "Tags": [
+        "Printmaking",
+        "Teaching",
+        "Laser Cutting"
+      ],
+      "Images": [
+        {
+          "ImageURL": "images/default-image.jpg",
+          "Description": "Default image description."
+        }
+      ],
+      "Complete": false,
+      "Favorite": false,
+      "Hidden": false
+    },
+    {
+      "Title": "Zenith Larp",
+      "BodyContent": "Talk about how I didn't make the system, but I did get to add content and runs plot for while. Also talk about how it introduced me to LARP in the first place and maybe how I got to design ARGs and props and costuming with aspects of project planning, meeting with a team and it used one of my hobbies - wandering around campus aimlessly. But yeah I made the advanced book, a bestiary, and our player repository, and remaking the item system.",
+      "Timeframe": {
+        "Sortable": "",
+        "Display": "Month Year"
+      },
+      "Description": "A brief description of the new project.",
+      "ThumbnailImage": "images/default-thumbnail.jpg",
+      "Collaborators": [],
+      "Tags": [
+        "Game Design",
+        "LARP"
+      ],
+      "Images": [
+        {
+          "ImageURL": "images/default-image.jpg",
+          "Description": "Default image description."
+        }
+      ],
+      "Complete": false,
+      "Favorite": false,
+      "Hidden": true
     }
   ]
 }
